syntax = "proto3";

package api;

service wallet_api {
    rpc Signature0(SignAdd_pass_hashMessage) returns(SignatureMessage){};
}

message SignAdd_pass_hashMessage {
  string address = 1;
  string password = 2;
  bytes hash = 3;
}

message SignatureMessage {
  bytes signature = 1;
}